Add feature to enable docs for docs.rs
The feature "docs-only" removes the need to link and call LHAPDF, which
is needed to build the documentation of this crate without having the
dependency installed. This feature is enabled by default on docs.rs,
which fails for the exact reason.

This workaround was copied from cpp_build's Cargo.toml.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "lhapdf"
-version = "0.1.1"
+version = "0.1.2"
 authors = ["Christopher Schwan <handgranaten-herbert@posteo.de>"]
 edition = "2018"
 license = "GPL-3.0-or-later"
@@ -11,8 +11,15 @@ categories = ["science"]
 description = "(Unofficial) Rust bindings for the LHAPDF C++ library"
 
 [dependencies]
+cfg-if = "0.1"
 cpp = "0.5"
 
 [build-dependencies]
 cpp_build = "0.5"
 pkg-config = "0.3"
+
+[features]
+docs-only = []
+
+[package.metadata.docs.rs]
+features = [ "docs-only" ]
