--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -35,7 +35,19 @@ jobs:
     - name: Install NNPDF31_nlo_as_0118_luxqed
       run: |
         lhapdf install NNPDF31_nlo_as_0118_luxqed
-    - name: Build
-      run: cargo build --verbose
-    - name: Run tests
-      run: cargo test --verbose
+    - name: Install Rust nightly
+      uses: actions-rs/toolchain@v1
+      with:
+          toolchain: nightly
+          default: true
+    - name: Run check
+      run: cargo check --verbose
+    - name: Generate doctest coverage
+      uses: actions-rs/tarpaulin@v0.1
+      with:
+        args: --ignore-tests
+        run-types: Doctests,Tests
+    - name: Upload to codecov.io
+      uses: codecov/codecov-action@v1
+      with:
+        token: ${{secrets.CODECOV_TOKEN}}
