--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -20,11 +20,12 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.7
-    - name: Install LHAPDF 6.3.0
+    - name: Install LHAPDF
       run: |
-        wget 'https://lhapdf.hepforge.org/downloads/?f=LHAPDF-6.3.0.tar.gz' -O LHAPDF-6.3.0.tar.gz
-        tar xzf LHAPDF-6.3.0.tar.gz
-        cd LHAPDF-6.3.0
+        echo "LHAPDF=LHAPDF-6.3.0" >> $GITHUB_ENV
+        wget 'https://lhapdf.hepforge.org/downloads/?f=${LHAPDF}.tar.gz' -O ${LHAPDF}.tar.gz
+        tar xzf ${LHAPDF}.tar.gz
+        cd ${LHAPDF}
         ./configure --prefix=${HOME}/prefix
         make -j
         make install
