Add `docs-only` feature
This feature supports building documentation on docs.rs, which does not
have the LHAPDF library

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,9 @@ thiserror = "1.0"
 [build-dependencies]
 cxx-build = "1.0"
 pkg-config = "0.3"
+
+[features]
+docs-only = []
+
+[package.metadata.docs.rs]
+features = [ "docs-only" ]
